--- a/package.json
+++ b/package.json
@@ -1,16 +1,31 @@
 {
   "name": "nodejs",
   "version": "1.0.0",
-  "description": "",
+  "description": "acp = \"!f() { git add . && git commit -m \\\"$@\\\" && git push; }; f\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node src/app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/joi": "^17.2.3",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "figlet": "^1.6.0",
+    "joi": "^17.9.2",
+    "morgan": "^1.10.0",
     "pg": "^8.11.1"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^20.3.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
