--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/app.ts"
+    "start": "ts-node src/app.ts",
+    "setup-db": "ts-node setupDb.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +19,8 @@
     "figlet": "^1.6.0",
     "joi": "^17.9.2",
     "morgan": "^1.10.0",
-    "pg": "^8.11.1"
+    "pg": "^8.11.1",
+    "pg-promise": "^11.5.0"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
