--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "figlet": "^1.6.0",
     "joi": "^17.9.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.1",
     "pg-promise": "^11.5.0"
   },
